--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,30 @@
 <head>
     <title>Rest API Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div>
     <h2>Rest API Demo</h2>
     <p>This page is a demonstration of a Rest API made using SpringBoot, Java and Maven.</p>
     <p>It calls a Rest API to retrieve the data from the database.</p>
+    <table>
+        <thead><tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Blurb</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr th:each="book: ${books}">
+                <td th:text="${book.id}" />
+                <td th:text="${book.title}" />
+                <td th:text="${book.author}" />
+                <td th:text="${book.blurb}" />
+            </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
